--- a/5/Vagrantfile
+++ b/5/Vagrantfile
@@ -1,98 +1,97 @@
-# Base Image for M1
-BOX_IMAGE = "bento/ubuntu-22.04"
-BOX_VERSION = "202502.21.0"
-
-# max number of worker nodes : Ex) N = 3
-N = 2
-
-# Version : Ex) k8s_V = '1.22.7'
+# Variables
 K8SV = '1.33.1-1.1' # Kubernetes Version : apt list -a kubelet , ex) 1.32.5-1.1
 CONTAINERDV = '1.7.27-1' # Containerd Version : apt list -a containerd.io , ex) 1.6.33-1
-cni_N = 'Calico'
-calico_V = '3.30.2'
+CNI_N = 'Calico'
+CALICOV = '3.30.2'
+N = 2 # max number of worker nodes
+
+# Base Image  https://portal.cloud.hashicorp.com/vagrant/discover/gutehall/ubuntu24-04
+BOX_IMAGE = "bento/ubuntu-24.04"
+BOX_VERSION = "202502.21.0"
 
 Vagrant.configure("2") do |config|
-#-----Manager Node
-    config.vm.define "k8s-m" do |subconfig|
+#-ControlPlane Node
+    config.vm.define "k8s-ctr" do |subconfig|
       subconfig.vm.box = BOX_IMAGE
       subconfig.vm.box_version = BOX_VERSION
-      subconfig.vm.provider "virtualbox" do |v|
-        v.customize ["modifyvm", :id, "--groups", "/#{cni_N}-Lab"]
-        v.customize ["modifyvm", :id, "--nicpromisc2", "allow-all"]
-        v.name = "#{cni_N}-k8s-m"
-        v.memory = 2048
-        v.cpus = 2 
-        v.linked_clone = true
+      subconfig.vm.provider "virtualbox" do |vb|
+        vb.customize ["modifyvm", :id, "--groups", "/Calico-Lab"]
+        vb.customize ["modifyvm", :id, "--nicpromisc2", "allow-all"]
+        vb.name = "k8s-ctr"
+        vb.cpus = 2
+        vb.memory = 2048
+        vb.linked_clone = true
       end
-      subconfig.vm.hostname = "k8s-ctr"
+      subconfig.vm.host_name = "k8s-ctr"
+      subconfig.vm.network "private_network", ip: "192.168.10.100"
+      subconfig.vm.network "forwarded_port", guest: 22, host: 60000, auto_correct: true, id: "ssh"
       subconfig.vm.synced_folder "./", "/vagrant", disabled: true
-      subconfig.vm.network "private_network", ip: "192.168.10.10"
-      subconfig.vm.network "forwarded_port", guest: 22, host: 50010, auto_correct: true, id: "ssh"
-      subconfig.vm.provision "shell", path: "https://raw.githubusercontent.com/hanship0530/book-k8s-network/main/5/init_cfg.sh", args: [ K8SV, CONTAINERDV]
-      subconfig.vm.provision "shell", path: "https://raw.githubusercontent.com/hanship0530/book-k8s-network/main/5/router-add1.sh"
-      subconfig.vm.provision "shell", path: "https://raw.githubusercontent.com/hanship0530/book-k8s-network/main/5/k8s-ctr.sh", args: [ cni_N, calico_V ]
+      subconfig.vm.provision "shell", path: "./init_cfg.sh", args: [ K8SV, CONTAINERDV]
+      subconfig.vm.provision "shell", path: "./k8s-ctr.sh", args: CALICOV
+      subconfig.vm.provision "shell", path: "./route-add1.sh"
     end
 
-#-----Router Node
-    config.vm.define "router" do |subconfig|
-      subconfig.vm.box = BOX_IMAGE
-      subconfig.vm.box_version = BOX_VERSION
-      subconfig.vm.provider "virtualbox" do |v|
-        v.customize ["modifyvm", :id, "--groups", "/#{cni_N}-Lab"]
-        v.name = "#{cni_N}-router"
-        v.memory = 512
-        v.cpus = 1
-        v.linked_clone = true
-      end
-      subconfig.vm.hostname = "router"
-      subconfig.vm.synced_folder "./", "/vagrant", disabled: true
-      subconfig.vm.network "private_network", ip: "192.168.10.254"
-      subconfig.vm.network "private_network", ip: "192.168.20.254"
-      subconfig.vm.network "forwarded_port", guest: 22, host: 50000, auto_correct: true, id: "ssh"
-      subconfig.vm.provision "shell", path: "https://raw.githubusercontent.com/hanship0530/book-k8s-network/main/5/router.sh", args: [ N, k8s_V, calico_V ]
-    end
-
-#-----Worker Node Subnet2
-    config.vm.define "k8s-w0" do |subconfig|
-      subconfig.vm.box = BOX_IMAGE
-      subconfig.vm.box_version = BOX_VERSION
-      subconfig.vm.provider "virtualbox" do |v|
-        v.customize ["modifyvm", :id, "--groups", "/#{cni_N}-Lab"]
-        v.name = "#{cni_N}-k8s-w0"
-        v.memory = 1536
-        v.cpus = 2
-        v.linked_clone = true
-      end
-      subconfig.vm.hostname = "k8s-w0"
-      subconfig.vm.synced_folder "./", "/vagrant", disabled: true
-      subconfig.vm.network "private_network", ip: "192.168.20.100"
-      subconfig.vm.network "forwarded_port", guest: 22, host: 50020, auto_correct: true, id: "ssh"
-      subconfig.vm.provision "shell", path: "https://raw.githubusercontent.com/hanship0530/book-k8s-network/main/5/init_cfg.sh", args: [ K8SV, CONTAINERDV]
-      subconfig.vm.provision "shell", path: "https://raw.githubusercontent.com/hanship0530/book-k8s-network/main/5/router-add2.sh"
-      subconfig.vm.provision "shell", path: "https://raw.githubusercontent.com/hanship0530/book-k8s-network/main/5/k8s-w.sh", args: [ calico_V ]
-    end
-
-#-----Worker Node Subnet1
+#-Worker Nodes Subnet1
   (1..N).each do |i|
     config.vm.define "k8s-w#{i}" do |subconfig|
       subconfig.vm.box = BOX_IMAGE
       subconfig.vm.box_version = BOX_VERSION
-      subconfig.vm.provider "virtualbox" do |v|
-        v.customize ["modifyvm", :id, "--groups", "/#{cni_N}-Lab"]
-        v.customize ["modifyvm", :id, "--nicpromisc2", "allow-all"]
-        v.name = "#{cni_N}-k8s-w#{i}"
-        v.memory = 1536
-        v.cpus = 2
-        v.linked_clone = true
+      subconfig.vm.provider "virtualbox" do |vb|
+        vb.customize ["modifyvm", :id, "--groups", "/Calico-Lab"]
+        vb.customize ["modifyvm", :id, "--nicpromisc2", "allow-all"]
+        vb.name = "k8s-w#{i}"
+        vb.cpus = 2
+        vb.memory = 1536
+        vb.linked_clone = true
       end
-      subconfig.vm.hostname = "k8s-w#{i}"
-      subconfig.vm.synced_folder "./", "/vagrant", disabled: true
+      subconfig.vm.host_name = "k8s-w#{i}"
       subconfig.vm.network "private_network", ip: "192.168.10.10#{i}"
-      subconfig.vm.network "forwarded_port", guest: 22, host: "5001#{i}", auto_correct: true, id: "ssh"
-      subconfig.vm.provision "shell", path: "https://raw.githubusercontent.com/hanship0530/book-k8s-network/main/5/init_cfg.sh", args: [ K8SV, CONTAINERDV]
-      subconfig.vm.provision "shell", path: "https://raw.githubusercontent.com/hanship0530/book-k8s-network/main/5/router-add1.sh"
-      subconfig.vm.provision "shell", path: "https://raw.githubusercontent.com/hanship0530/book-k8s-network/main/5/k8s-w.sh", args: [ calico_V ]
+      subconfig.vm.network "forwarded_port", guest: 22, host: "6000#{i}", auto_correct: true, id: "ssh"
+      subconfig.vm.synced_folder "./", "/vagrant", disabled: true
+      subconfig.vm.provision "shell", path: "./init_cfg.sh", args: [ K8SV, CONTAINERDV]
+      subconfig.vm.provision "shell", path: "./k8s-w.sh", args: [CALICOV]
+      subconfig.vm.provision "shell", path: "./route-add1.sh"
     end
   end
+
+#-Router Node
+    config.vm.define "router" do |subconfig|
+      subconfig.vm.box = BOX_IMAGE
+      subconfig.vm.box_version = BOX_VERSION
+      subconfig.vm.provider "virtualbox" do |vb|
+        vb.customize ["modifyvm", :id, "--groups", "/Calico-Lab"]
+        vb.name = "router"
+        vb.cpus = 1
+        vb.memory = 768
+        vb.linked_clone = true
+      end
+      subconfig.vm.host_name = "router"
+      subconfig.vm.network "private_network", ip: "192.168.10.200"
+      subconfig.vm.network "forwarded_port", guest: 22, host: 60009, auto_correct: true, id: "ssh"
+      subconfig.vm.network "private_network", ip: "192.168.20.200", auto_config: false
+      subconfig.vm.synced_folder "./", "/vagrant", disabled: true
+      subconfig.vm.provision "shell", path: "./router.sh"
+    end
+
+#-Worker Nodes Subnet2
+    config.vm.define "k8s-w0" do |subconfig|
+      subconfig.vm.box = BOX_IMAGE
+      subconfig.vm.box_version = BOX_VERSION
+      subconfig.vm.provider "virtualbox" do |vb|
+        vb.customize ["modifyvm", :id, "--groups", "/Calico-Lab"]
+        vb.customize ["modifyvm", :id, "--nicpromisc2", "allow-all"]
+        vb.name = "k8s-w0"
+        vb.cpus = 2
+        vb.memory = 1536
+        vb.linked_clone = true
+      end
+      subconfig.vm.host_name = "k8s-w0"
+      subconfig.vm.network "private_network", ip: "192.168.20.100"
+      subconfig.vm.network "forwarded_port", guest: 22, host: 60010, auto_correct: true, id: "ssh"
+      subconfig.vm.synced_folder "./", "/vagrant", disabled: true
+      subconfig.vm.provision "shell", path: "./init_cfg.sh", args: [ K8SV, CONTAINERDV]
+      subconfig.vm.provision "shell", path: "./k8s-w.sh", args: [CALICOV]
+      subconfig.vm.provision "shell", path: "./route-add2.sh"
+    end
 
 end
